--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.82"
 bio = "1.6.0"
-clap = "4.5.4"
+clap = { version = "4.5.7", features = ["derive"] }
 csv = "1.3.0"
 flate2 = "1.0.28"
 rust-htslib = { version = "0.46.0", features = ["bzip2", "lzma"], default-features = false }
